# comfyui-save-image-organized

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTINUE.md  CONTRIBUTING.md  LICENSE  README.md  nodes.py  pyproject.toml
.github/workflows/: ci.yml  publish_action.yml
docs/: INSTALLATION.md  USAGE.md
tests/: conftest.py  test_check_release_ready.py  test_detection_fixtures.py  test_migrate_save_image_nodes.py  test_nodes.py  test_validate_local_workflows.py
tests/fixtures/: detection_checkpoint_widget_object.json
tools/: check_release_ready.py  migrate_save_image_nodes.py  validate_local_workflows.py
web/: save_image_clean.js
web/docs/: SaveImageClean.md
