[project]
name = "save-image-organized"
version = "0.6.0"
description = "Organized image saving for ComfyUI with model-aware folders and template variables."
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "Pillow",
]
classifiers = [
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/Delcado19/comfyui-save-image-organized"
Documentation = "https://github.com/Delcado19/comfyui-save-image-organized#readme"
"Bug Tracker" = "https://github.com/Delcado19/comfyui-save-image-organized/issues"

[tool.comfy]
PublisherId = "delcado"
DisplayName = "Save Image Organized"
Icon = "https://raw.githubusercontent.com/Delcado19/comfyui-save-image-organized/main/assets/registry-icon.svg"
Banner = "https://raw.githubusercontent.com/Delcado19/comfyui-save-image-organized/main/assets/github-social-preview.png"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
